# MLOps

./: .gitignore  .pre-commit-config.yaml  README.md  backend.dockerfile  cloudbuild.yaml  data.dvc  frontend.dockerfile  pyproject.toml  requirements_backend.txt  requirements_frontend.txt  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: codecheck.yaml  dvc-workflow.yaml  pre_commit.yaml  tests.yaml
analyze/: README.md  analyze1.py  analyze2.py  profile1.txt  profile2.txt
configs/: config_cpu.yaml  default_config.yaml  sweep.yaml
configs/experiment/: exp1.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: cnn_model.pth
outputs/2026-01-15/16-23-13/.hydra/: hydra.yaml
outputs/2026-01-15/16-25-34/.hydra/: hydra.yaml
outputs/2026-01-15/16-26-04/.hydra/: config.yaml  hydra.yaml
reports/: README.md  report.html
src/ml_ops_project/: api.py  data.py  dataset_stats_art.py  frontend.py  load_from_env_file.py  model.py  train.py
tests/: load_testing.py  test_api.py  test_data.py  test_model.py  test_training.py
