[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "ml_ops_project"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Group 39", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc-gs>=3.0.2",
    "fastapi==0.115.6",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pathspec<1.0.0",
    "python-dotenv>=1.2.1",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.24.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff>=0.14.10",
    "mkdocstrings-python==1.12.2",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
target-version = "py311"

line-length = 120
lint.select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "I",
  "ICN",
  "INT",
  "ISC",
  "LOG",
  "N",
  "PGH",
  "PIE",
  "PT",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "TCH",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "B008",
  "B028",
  "B905",
  "COM812",
  "D100",
  "D107",
  "D211",
  "D212",
  "F821",
  "F841",
  "ISC001",
  "S301",
  "S311",
  "S603",
  "S605",
  "S607",
  "TC003",
  "D",
  "S101",
  "E741",
  "N806",
  "N812",
  "EM101",
]
lint.exclude = [ "student_repos/" ]
lint.pydocstyle.convention = "google"

[tool.coverage.run]
omit = ["tests/*"]
